# AbletonProjectTriageMain

./: .gitignore  MainPRD V1.md  README.md
backend/: pyproject.toml  requirements.txt  test_structure.py
backend/app/: __init__.py  config.py  database.py  main.py
backend/app/api/: __init__.py  audio.py  migration.py  projects.py  scan.py  settings.py  studio.py
backend/app/models/: __init__.py  migration.py  project.py  settings.py
backend/app/services/: __init__.py  hygiene.py  migration.py  parser.py  scanner.py  scorer.py  studio.py  triage.py
backend/app/utils/: __init__.py  file_ops.py  validators.py  xml_parser.py
backend/tests/: __init__.py  test_migration.py  test_parser.py  test_scanner.py
data/: .gitkeep
data/manifests/: .gitkeep
data/rollback/: .gitkeep
frontend/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/components/: AudioPlayer.tsx  ProjectCard.tsx  Sidebar.tsx
frontend/src/hooks/: useAudio.ts  useMigration.ts  useProjects.ts
frontend/src/pages/: Dashboard.tsx  HygienePage.tsx  MigrationPage.tsx  ScanPage.tsx  StudioPage.tsx  TriagePage.tsx
frontend/src/services/: api.ts
frontend/src/types/: project.ts
